--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
         {% endfor %}
         <li><a class="feed" href="{{ site.url }}{{site.baseurl}}/feed.xml" title="Atom/RSS feed">Feed</a></li>
     </ul>
-    <p><span>¨Ï</span> 2017 <a href="https://www.facebook.com/cremazer" target="_blank" class="creator">Cremazer</a></p>
+    <p><span>â“’COPYRIGHT</span> 2017 <a href="https://www.facebook.com/cremazer" target="_blank" class="creator">Cremazer</a></p>
 </footer>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
 {% include stats.html %}
