--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,8 +8,7 @@
     function load_disqus()
     {
         disqus_loaded = true;
-        var disqus_shortname = '{{site.MinSJang}}';
-        //var disqus_shortname = '{{site.disqus_username}}';
+        var disqus_shortname = '{{site.kyuseoshim}}';	//disqus_username
         var disqus_title = '{{page.title.replace("'", "\\'")}}';
         var disqus_url = '{{page.url}}';
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
