--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-40F0JYP2VM');
+      gtag('config', 'G-40F0JYP2VM', { 'optimize_id': 'GTM-TBNBPVW'});
     </script>
     
     <!-- Social: Twitter -->
