--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,17 +28,14 @@
                 {{ content }}
                 
                 <!-- google addsense -->
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <div align="center" style="margin: 1em 0;">
-                    <ins class="adsbygoogle"
-                         style="display:block; border-bottom: initial;"
-                         data-ad-client="ca-pub-7784001917683726"
-                         data-ad-format="auto"></ins>
-                </div>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
+                     (adsbygoogle = window.adsbygoogle || []).push({
+                          google_ad_client: "ca-pub-7784001917683726",
+                          enable_page_level_ads: true
+                     });
                 </script>
-                111
+
             </article>
 
             <div class="progress-bar" data-minutes="{{ totalMinutes }}">
