--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,19 @@ layout: default
 
   <article class="post-content">
     {{ content }}
+    
+    <!-- google addsense -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <div align="center" style="margin: 1em 0;">
+      <ins class="adsbygoogle"
+         style="display:block; border-bottom: initial;"
+         data-ad-client="ca-pub-7784001917683726"
+         data-ad-format="auto"></ins>
+    </div>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    
   </article>
 
 </div>
