--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,16 @@ layout: compress
             <section class="content">
                 {{ content }}
             </section>
+    
+        <!-- google adsense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({
+                  google_ad_client: "ca-pub-7784001917683726",
+                  enable_page_level_ads: true
+             });
+        </script>
+        
         {% include footer.html %}
     </body>
 </html>
