--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,16 @@
       gtag('config', 'G-40F0JYP2VM', { 'optimize_id': 'GTM-TBNBPVW'});
     </script>
     
+    <!-- google adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle myAd1190"
+         data-ad-client="ca-pub-7784001917683726"
+         data-ad-slot-"6559875097">
+    </ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    
     <!-- Social: Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@{{site.twitter_username}}">
