--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,6 +9,17 @@ layout: compress
         {% include svg-icons.html %}
         {% include header.html %}            
             <section class="content">
+                <!-- google adsense -->
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                     data-ad-client="ca-pub-7784001917683726"
+                     data-ad-slot-"9306612020"
+                     data-ad-format="auto">
+                </ins>
+                <script>
+                     (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+                
                 {{ content }}
             </section>
         {% include footer.html %}
