--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,12 +18,15 @@
     
     <!-- google adsense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <ins class="adsbygoogle myAd1190"
+    <!-- 사이트 반응형 -->
+    <ins class="adsbygoogle"
+         style="display:block"
          data-ad-client="ca-pub-7784001917683726"
-         data-ad-slot-"9306612020">
-    </ins>
+         data-ad-slot="4672028245"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
     <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
+        (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
     
     <!-- Social: Twitter -->
