--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,7 @@
 <head>
+    <!-- google adsense -->
+    <script data-ad-client="ca-pub-7784001917683726" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,20 +18,7 @@
 
       gtag('config', 'G-40F0JYP2VM', { 'optimize_id': 'GTM-TBNBPVW'});
     </script>
-    
-    <!-- google adsense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- 사이트 반응형 -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-7784001917683726"
-         data-ad-slot="4672028245"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    
+        
     <!-- Social: Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@{{site.twitter_username}}">
