google adsense 2020.10.29일자 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,7 @@
                 </div>
             </div>
 
+			{% include adsense.html %}
             {% include share.html %}
             {% include author.html %}
             {% include comments.html %}
