add coupang partners banner in the post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,9 @@
                     <img src="{{ page.image }}" alt="Imagem de capa" class="post-cover">
                 {% endif %}
 
+				<!-- Coupang partners : Featured banner based on customer interest -->
+				{% include coupangpartners.html %}
+
                 {{ content }}
             </article>
 
